# deep_research

./: LICENSE  README.md
00_labs/: .env.example  01_simple_agent.ipynb  02_planner_agent.ipynb  03_researcher_agent.ipynb  04_writer_agent.ipynb  05_deep_research_architecture.ipynb  06_gradio_and_quarto.ipynb  README.md  pyproject.toml
01_back_end/: .dockerignore  .env.example  Dockerfile  Makefile  app.py  main.py  pyproject.toml  readme.md
01_back_end/config/: config.py  logs.py
01_back_end/config/prompts/: planner.j2  researcher.j2  writer.j2
01_back_end/core/: logic.py
01_back_end/models/: planner.py  researcher.py  writer.py
01_back_end/modules/: planner.py  researcher.py  writer.py
01_back_end/modules/mpcs/: web_mcp.py
01_back_end/utils/: prompt_manager.py  update_progress.py
